--- a/zoo-css-challenge/index.html
+++ b/zoo-css-challenge/index.html
@@ -21,6 +21,10 @@
  	<main>
  		<section class="introduction">
  			<h1>Birmingham Zoo</h1>
+			<p>The zoo is open every day of the year and features three major biomes: the Tropic Zone, Temperate Territory, and the
+			Polar Circle. 
+			<br> From tropical birds, to snow leopards, grizzly bears, and one of the nation’s largest colonies of
+			Antarctic penguins, there are animals to enjoy in every season.</p>
  		</section>
 
  		<div id="badge">
@@ -30,6 +34,7 @@
 		<section class="bears">
 			<h2>Bears</h2>
 			<p>Did you know that a bear's closest relative is the seal? Or that bears can smell over 2,000 times better than humans?</p>
+			<br>
 			<div class="image-container">
 				<img
 					src="https://placebear.com/200/300"
@@ -55,10 +60,10 @@
 			<h3>Top 5 Tiger Facts</h3>
 			<ol>
 				<li>Tigers are the largest cat species in the world reaching up to 3.3 meters in length and weighing up to 670 pounds!
-				<li>Tigers are easily recognizable with their dark vertical stripes and reddish/orange fur.
-				<li>The Bengal tiger is the most common tiger.
-				<li>Tigers live between 20-26 years in the wild.
-				<li>Unlike most other cats, tigers are great swimmers and actually like the water.
+				<br><li>Tigers are easily recognizable with their dark vertical stripes and reddish/orange fur.
+				<br><li>The Bengal tiger is the most common tiger.
+				<br><li>Tigers live between 20-26 years in the wild.
+				<br><li>Unlike most other cats, tigers are great swimmers and actually like the water.
 			</ol>
 		</section>
 
@@ -75,7 +80,9 @@
 
 			<h3>Height and Size</h3>
 
-			<p>Giraffes use their height to good advantage and browse on leaves and buds in treetops that few other animals can reach (acacias are a favorite). Even the giraffe's tongue is long! The 21-inch tongue helps them pluck tasty morsels from branches. Giraffes eat most of the time and, like cows, regurgitate food and chew it as cud. A giraffe eats hundreds of pounds of leaves each week and must travel miles to find enough food.</p>
+			<p>Giraffes use their height to good advantage and browse on leaves and buds in treetops that few other animals can reach (acacias are a favorite).
+				Even the giraffe's tongue is long! The 21-inch tongue helps them pluck tasty morsels from branches.
+			<br> Giraffes eat most of the time and, like cows, regurgitate food and chew it as cud. A giraffe eats hundreds of pounds of leaves each week and must travel miles to find enough food.</p>
 		</section>
 
 		<section class="news">
@@ -102,7 +109,8 @@
 
 		<section class="membership">
 			<h2>Are there any benefits or discounts for members?</h2>
-			<p>There are <strong>AMAZING</strong> benefits of becoming a member with Birmingham Zoo! Our members get special discounts in our shops, cafes, and unlimited entry</p>
+			<p>There are <strong>AMAZING</strong> benefits of becoming a member with Birmingham Zoo! <br>
+				Our members get special discounts in our shops, cafes, and unlimited entry</p>
 			<button>Learn More</button>
 		</section>
 
