--- a/zoo-css-challenge/index.html
+++ b/zoo-css-challenge/index.html
@@ -79,7 +79,7 @@
 		</section>
 
 		<section class="news">
-			<h2>News</h2>
+			<h2>NEWS</h2>
 			<div class="card">
 				<time>2010-04-16</time>
 				<h4>Helping wild turtles in Seychelles</h4>
@@ -88,6 +88,11 @@
 			<div class="card">
 				<time>2010-04-12</time>
 				<h4>Learning about the rainforest</h4>
+				<a>Find out More</a>
+			</div>
+			<div class="card">
+				<time>2022-07-29</time>
+				<h4>Which big cat are you?</h4>
 				<a>Find out More</a>
 			</div>
 		</section>
