--- a/zoo-css-challenge/index.html
+++ b/zoo-css-challenge/index.html
@@ -116,7 +116,7 @@
 			<h2>Programs</h2>
 			<div class="card">
 				<h4>Children and Family Programs</h4>
-				<a href="https://www.w3schools.com">Find out More</a>
+				<a href="https://www.w3schools.com" target="_blank">Find out More</a>
 			</div>
 			<div class="card">
 				<h4>Adult Programs</h4>
@@ -124,7 +124,7 @@
 			</div>
 			<div class="card">
 				<h4>Youth and young adults</h4>
-				<a href="http://www.wikipedia.org/" target="_top">Find out More</a>
+				<a href="http://www.wikipedia.org/" target="_blank">Find out More</a>
 			</div>
 		</section>
 
