--- a/zoo-css-challenge/index.html
+++ b/zoo-css-challenge/index.html
@@ -53,10 +53,10 @@
 			<h2>Tiger Facts</h2>
 			<ul>
 				<li>Tigers are the largest cat species in the world reaching up to 3.3 meters in length and weighing up to 670 pounds!
-				<br><li>Tigers are easily recognizable with their dark vertical stripes and reddish/orange fur.
-				<br><li>The Bengal tiger is the most common tiger.
-				<br><li>Tigers live between 20-26 years in the wild.
-				<br><li>Unlike most other cats, tigers are great swimmers and actually like the water.
+				<li>Tigers are easily recognizable with their dark vertical stripes and reddish/orange fur.
+				<li>The Bengal tiger is the most common tiger.
+				<li>Tigers live between 20-26 years in the wild.
+				<li>Unlike most other cats, tigers are great swimmers and actually like the water.
 			</ul>
 		</section>
 
@@ -125,6 +125,31 @@
 			<div class="card">
 				<h4>Youth and young adults</h4>
 				<a href="http://www.wikipedia.org/" target="_blank">Find out More</a>
+			</div>
+		</section>
+
+		<section class="mysection">
+			<h2>MY DEAR AND FIRST CAT IS NAME <em>DAVICHO</em></h2>
+		
+			<p>Su pelaje es suave, es anaranjado, es muy dulce conmigo pero no se dejaba acariciar de nadie más.
+				Le gustan las croquetas de pollo y las gatitas.
+				Siempre que tenía hambre me decía mamá, es tan único!
+			</p>
+			<p>Davicho tenía pecas en la nariz, en los ojos y en la trompra. ¡Es único!</p>
+			<p>Lo extraño tanto, lo recogí de la calle y ahora vive unicamente en mi corazón.</p>
+		
+			<div class="davicho">
+			<img 
+				src="C:\Users\consuelo\Downloads\WEB DEVELOPMENT\HTML & CSS\TAREA WEEK 1\zoo-css-challenge\zoo-css-challenge\davicho1.jpg" 
+				alt="Kitty">
+			
+			<img 
+				src="C:\Users\consuelo\Downloads\WEB DEVELOPMENT\HTML & CSS\TAREA WEEK 1\zoo-css-challenge\zoo-css-challenge\davicho2.jpg"
+				alt="Kitty">
+				
+			<img 
+				src="C:\Users\consuelo\Downloads\WEB DEVELOPMENT\HTML & CSS\TAREA WEEK 1\zoo-css-challenge\zoo-css-challenge\davicho3.jpg"
+				alt="Kitty">
 			</div>
 		</section>
 
